Changed map position and border radius

--- a/src/styles/map.css
+++ b/src/styles/map.css
@@ -3,10 +3,12 @@
   width: 100%;
 }
 .mapp {
-  width: 100%;
-  height: 88vh;
+  width: 98%;
+  height: 85vh;
   position: relative;
   background: #fff;
   color: #000;
   z-index: 5;
+  border-radius: 30px;
+  overflow: hidden;
 }
