--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -40,6 +40,13 @@ body {
     align-items: center;
     flex-direction: column;
 }
+.margin4{
+    background-image:linear-gradient(to bottom right,rgb(92, 148, 92), rgb(44, 124, 44)) ;
+    display: flex;
+    height: 88vh;
+    justify-content: center;
+    align-items: center;
+}
 .app {
     width: 100%;
     height: 100%;
