--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,6 +14,10 @@ html {
     --background: transparent;
 }
 
+::-webkit-scrollbar {
+    display: none;
+  }
+
 body {
     width: 100vw;
     min-height: 100vh;
@@ -29,11 +33,11 @@ body {
     align-items: center;
 }
 .margin2{
-    padding: 3vh 5vw 7vh 5vw;
+    padding: 5vh 2.5vw;
     background-image:   linear-gradient(to bottom right,rgb(184, 255, 184), rgb(44, 124, 44)) ;
 }
 .margin3{
-    padding: 3vh 5vw 7vh 5vw;
+    padding: 3vh 3vw 7vh 3vw;
     background-image:   linear-gradient(to bottom right,rgb(184, 255, 184), rgb(44, 124, 44)) ;
     display: flex;
     justify-content: center;
@@ -44,6 +48,8 @@ body {
     background-image:linear-gradient(to bottom right,rgb(92, 148, 92), rgb(44, 124, 44)) ;
     display: flex;
     height: 88vh;
+    width: 100vw;
+    padding: 25px;
     justify-content: center;
     align-items: center;
 }
@@ -62,7 +68,6 @@ body {
     background: linear-gradient(rgba(0, 0, 0, 0.527),rgba(0, 0, 0, 0.5)), url('/public/background.jpg') center center;
     display: flex;
     align-items: center;
-    justify-content: center;
 }
 
 .background-img h1:nth-child(1) {
@@ -82,7 +87,7 @@ body {
 .bg-img{
     width: 100vw;
     height: 12vh;
-    background: green;
+    background:#09a509;
     display: flex;
     align-items: center;
     justify-content: center;
