drobna zmiana css

--- a/src/styles/airIndex.scss
+++ b/src/styles/airIndex.scss
@@ -2,7 +2,7 @@
 
 .container {
   color: #828282;
-  background: rgb(255, 255, 255);
+  background: rgba(39, 109, 43, .5);
   padding: 40px;
   border-radius: 30px;
   display: grid;
