drobna zmiana css

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: left;
     padding: 28px;
-    background-color: white;
+    background-color: rgba(39, 109, 43, 0.5);
     margin-top: 34px;
 }
 .divV{
