--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -34,6 +34,7 @@
     text-align: center;
     margin-left: 12px;
     margin-right: 12px;
+    font-size: 10px;
 }
 .iSocial>p{
     margin-top: 14px;
