--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -24,7 +24,7 @@ nav {
     width: 100%;
     top: 0;
     height: 12vh;
-    padding: 0 8vw;
+    padding: 0 2vw;
     transition: height .3s ease;
     z-index: 1000000;
     background: var(--background);
@@ -34,7 +34,7 @@ nav {
 nav ul {
     list-style-type: none;
     display: flex;
-    flex: 1.3;
+    flex: 3;
     justify-content: space-between;
     align-items: center;
 }
@@ -44,7 +44,7 @@ nav ul a {
     text-decoration: none;
     letter-spacing: 1.5px;
     color: var(--text-color);
-    font-size: 30px;
+    font-size: 25px;
     position: relative;
 }
 
@@ -90,8 +90,11 @@ nav ul .header-link:hover::after {
 .nav-toggle {
     display: none;
 }
-
-
+nav>ul>li{
+    display: flex;
+    align-items: center;
+    gap: 1.5vw;
+}
 
 @media screen and (max-width: 1500px) {    
     nav ul a {
