naprawienie kontaktu i emaila

--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -56,6 +56,7 @@
 }
 .blanku{
     background-color: rgb(228, 228, 228);
+    font-size: 25px;
 }
 .blankus{
     background-color: rgb(241, 241, 241);
