--- a/src/styles/dropdownButtons.css
+++ b/src/styles/dropdownButtons.css
@@ -38,8 +38,8 @@
 }
 .dropdownAbout{
     color: #fff;
+    background: rgb(44, 124, 44);
     border: solid hsl(120, 48%, 35%) 5px;
-    background: transparent;
     border-radius: 30px;
     font-size: x-large;
     margin-top: 5px;
