search do mapy css

--- a/src/styles/LeafletCSS&IMG/leaflet.css
+++ b/src/styles/LeafletCSS&IMG/leaflet.css
@@ -287,6 +287,7 @@ svg.leaflet-image-layer.leaflet-interactive path {
   font-size: 12px;
   font-size: 0.75rem;
   line-height: 1.5;
+  color: black;
 }
 
 /* general toolbar styles */
